# sp-rich-core

./: .gitignore  Makefile.am  _src  configure.ac  sp-rich-core.changes  sp-rich-core.spec
core-reducer/: defines.h  elfbinaryreader.cpp  elfbinaryreader.h  elfcorereader.cpp  main.cpp  procinterface.cpp  rawelfwriter.cpp  reducer.cpp  reducer.h
debian/: changelog  control  rules  sp-rich-core.dirs
gdb/: Makefile.am  load_stacktrace_qml  stacktrace_qml.py
rich-core-extract/: rich-core-extract.c
rpm/: sp-rich-core.spec
scripts/: Makefile.am  core-reducer.exclude  rich-core-check-oneshot  rich-core-dumper  rich-core-dumps  rich-core-early-collect.service  rich-core-pattern  rich-core-pattern.service  rich-core-preinit
sysctl/: Makefile.am  sp-rich-core.conf
tests/: test_extra_files  test_extract  test_script  test_whiteblacklist  tests.xml
tests/unit_tests/: Makefile.am
